--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -15,6 +15,15 @@ body {
     margin: 0;
     padding: 0;
   }
+  &.bodyfixed {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
+  }
 }
 .row {
   @include makeRow();
